# loadcell-temp-compensation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
loadcell_temp_comp/: __init__.py
tests/: test_compensator.py
